tests/snapshots/secuencia_hosts_200x60.snap
---
source: tests/redimensionado/arnes.rs
---
┌ MAGI · HOSTS ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── 57 hosts ─┐
│  ▼ sin grupo                                                     (50)                                                                                                                                │
│    ○ nodo-00                    10.9.0.0             ops        22                                                                                                                                   │
│    ○ nodo-01                    10.9.0.1             ops        22                                                                                                                                   │
│    ○ nodo-02                    10.9.0.2             ops        22                                                                                                                                   │
│    ○ nodo-03                    10.9.0.3             ops        22                                                                                                                                   │
│    ○ nodo-04                    10.9.0.4             ops        22                                                                                                                                   │
│    ○ nodo-05                    10.9.0.5             ops        22                                                                                                                                   │
│    ○ nodo-06                    10.9.0.6             ops        22                                                                                                                                   │
│    ○ nodo-07                    10.9.0.7             ops        22                                                                                                                                   │
│    ○ nodo-08                    10.9.0.8             ops        22                                                                                                                                   │
│    ○ nodo-09                    10.9.0.9             ops        22                                                                                                                                   │
│    ○ nodo-10                    10.9.0.10            ops        22                                                                                                                                   │
│    ○ nodo-11                    10.9.0.11            ops        22                                                                                                                                   │
│    ○ nodo-12                    10.9.0.12            ops        22                                                                                                                                   │
│    ○ nodo-13                    10.9.0.13            ops        22                                                                                                                                   │
│    ○ nodo-14                    10.9.0.14            ops        22                                                                                                                                   │
│    ○ nodo-15                    10.9.0.15            ops        22                                                                                                                                   │
│    ○ nodo-16                    10.9.0.16            ops        22                                                                                                                                   │
│    ○ nodo-17                    10.9.0.17            ops        22                                                                                                                                   │
│    ○ nodo-18                    10.9.0.18            ops        22                                                                                                                                   │
│    ○ nodo-19                    10.9.0.19            ops        22                                                                                                                                   │
│    ○ nodo-20                    10.9.0.20            ops        22                                                                                                                                   │
│    ○ nodo-21                    10.9.0.21            ops        22                                                                                                                                   │
│    ○ nodo-22                    10.9.0.22            ops        22                                                                                                                                   │
│    ○ nodo-23                    10.9.0.23            ops        22                                                                                                                                   │
│    ○ nodo-24                    10.9.0.24            ops        22                                                                                                                                   │
│    ○ nodo-25                    10.9.0.25            ops        22                                                                                                                                   │
│    ○ nodo-26                    10.9.0.26            ops        22                                                                                                                                   │
│    ○ nodo-27                    10.9.0.27            ops        22                                                                                                                                   │
│    ○ nodo-28                    10.9.0.28            ops        22                                                                                                                                   │
│▸   ○ nodo-29                    10.9.0.29            ops        22                                                                                                                                   │
│    ○ nodo-30                    10.9.0.30            ops        22                                                                                                                                   │
│    ○ nodo-31                    10.9.0.31            ops        22                                                                                                                                   │
│    ○ nodo-32                    10.9.0.32            ops        22                                                                                                                                   │
│    ○ nodo-33                    10.9.0.33            ops        22                                                                                                                                   │
│    ○ nodo-34                    10.9.0.34            ops        22                                                                                                                                   │
│    ○ nodo-35                    10.9.0.35            ops        22                                                                                                                                   │
│    ○ nodo-36                    10.9.0.36            ops        22                                                                                                                                   │
│    ○ nodo-37                    10.9.0.37            ops        22                                                                                                                                   │
│    ○ nodo-38                    10.9.0.38            ops        22                                                                                                                                   │
│    ○ nodo-39                    10.9.0.39            ops        22                                                                                                                                   │
│    ○ nodo-40                    10.9.0.40            ops        22                                                                                                                                   │
│    ○ nodo-41                    10.9.0.41            ops        22                                                                                                                                   │
│    ○ nodo-42                    10.9.0.42            ops        22                                                                                                                                   │
│    ○ nodo-43                    10.9.0.43            ops        22                                                                                                                                   │
│    ○ nodo-44                    10.9.0.44            ops        22                                                                                                                                   │
│    ○ nodo-45                    10.9.0.45            ops        22                                                                                                                                   │
│    ○ nodo-46                    10.9.0.46            ops        22                                                                                                                                   │
│    ○ nodo-47                    10.9.0.47            ops        22                                                                                                                                   │
│    ○ nodo-48                    10.9.0.48            ops        22                                                                                                                                   │
│    ○ nodo-49                    10.9.0.49            ops        22                                                                                                                                   │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ↵ conectar  ↓↑ mover  →← plegar  e editar  n nuevo  g grupo  x borrar  ⇥ etiquetas  / filtrar  ! snippets  ^p paleta  q salir  ? ayuda
