tests/snapshots/sesion_12_pestanas_80x24.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIÓN ─────────────────────────────────────────────── mac-mini-m1 (2) ─
‹ ● 4 │ ◐ 5 │ ● 6 │ ● 7 │ ◐ 8 │ ● 9 │ ● 10 │ ▸● 11 mac-mini-m1 (… │ ● 12 │ +
root@hetzner-01:~# htop
  (htop repintado a 80x20)
█

















 ● 11/12 · mac-mini-m1 · 18 m · clave · 80×20 · carga 9.6 · 1 ventana · ^] ?
