tests/snapshots/sesion_200x60.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIÓN ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── hetzner-01 ─
▸● hetzner-01 │ ◐ mac-mini-m1 │ ✕ rincon-dev │ + nueva
root@hetzner-01:~# htop
  (htop repintado a 200x56)
█





















































 ● 1/3 · hetzner-01 · conectado 18 m · ed25519 (agente) · 200×56 · carga 0.4 · 2 ventanas · Ctrl+] ? ayuda
