tests/snapshots/sesion_60x16.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIÓN ──────────────────────────────── hetzner-01 ─
▸● 1 hetzner-01 │ ◐ 2 │ ✕ 3 │ +
root@hetzner-01:~# htop
  (htop repintado a 60x12)
█









 ● 1/3 · hetzner-01 · 18 m · ed25519 (agente) · ^] ?
