tests/snapshots/sesion_80x24.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIÓN ──────────────────────────────────────────────────── hetzner-01 ─
▸● 1 hetzner-01 │ ◐ 2 │ ✕ 3 │ +
root@hetzner-01:~# htop
  (htop repintado a 80x20)
█

















 ● 1/3 · hetzner-01 · 18 m · ed25519 (agente) · carga 0.4 · 2 ventanas · ^] ?
