tests/snapshots/sesion_aviso_39x7.snap
---
source: tests/redimensionado/arnes.rs
---
┌─────────────────────────────────────┐
│                                     │
│     ✕ ventana demasiado pequeña     │
│         39×7 · mínimo 40×8          │
│                                     │
│                                     │
└─────────────────────────────────────┘
