tests/snapshots/sesion_caida_40x12.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIÓN ──────────── rincon-dev ─
 ● 1 │ ◐ 2 │ ▸✕ 3 rincon-dev │ +
   ┌ SESIÓN CAÍDA ──────────────────┐
   │                                │
   │ ✕ Sesión caída hace 2 h 00 m   │
   │ conexión cerrada por el remoto │
   │                                │
   │ ^] r reconectar  ^] x cerrar   │
   └────────────────────────────────┘

 ✕ 3/3 · rincon-dev · 2 h 00 m · ^] ?
